Fixed overflow issue

--- a/src/css/input.css
+++ b/src/css/input.css
@@ -11,6 +11,7 @@
   }
   body {
     @apply text-body font-medium;
+    @apply overflow-x-hidden;
   }
   main {
     min-height: 100vh;
